# transaction_chatbot_be

./: .env.example  README.md  main.py  pyproject.toml  requirnments.txt
src/aggregator/: chart_aggregator.py  forecast_aggregator.py  summary_aggregator.py
src/ai/: chart.py  chart_spec_generator.py  comparison.py  forecast.py  forecast_spec_generator.py  gemini_service.py  general_qa.py  query_router.py  sql_query_generator.py  summary.py  summary_spec_generator.py
src/ai/promt/: chart_prompt.py  chart_spec_promt.py  comparison_prompt.py  forecast_prompt.py  forecast_spec_prompt.py  general_qa_prompt.py  query_router_promt.py  sql_query_promt.py  summary_promt.py  summary_spec_prompt.py
src/config/: app_config.py  db_config.py  field_constant.py  model_config.json  model_config.py  redis_config.py  startup.py
src/db/: db_service.py  model_service.py  redis_service.py
src/function/: comparison_service.py  export_service.py  health_service.py  invoice_fetch_service.py  serach_service.py  session_service.py
src/lifecycle/: cleanup.py  shutdown.py  startup.py
src/middleware/: tenant_middleware.py
src/models/: __init__.py  base.py  config.py  factory.py  loader.py  model_service.py  registry.py
src/models/providers/: __init__.py  anthropic.py  gemini.py  openai.py
src/routers/: comparison_router.py  export_router.py  fetch_router.py  health_router.py  search_router.py  session_router.py
src/schemas/: schemas.py
src/utils/: transaction_lookups.py  utils.py
